# Lattice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/actions/: ImportAction.cpp  ImportAction.hpp
src/app/: AppState.cpp  AppState.hpp  ItemListPane.hpp  ItemModel.cpp  ItemModel.hpp  ItemPropertyPane.cpp  ItemPropertyPane.hpp  ItemPropertyPaneViewModel.cpp  ItemPropertyPaneViewModel.hpp  ItemSelectionModel.cpp  ItemSelectionModel.hpp  MainWindow.cpp  MainWindow.hpp  MaterialListPane.cpp  MaterialListPane.hpp  main.cpp
src/document/: Change.cpp  Change.hpp  Document.cpp  Document.hpp  EmptyItem.cpp  EmptyItem.hpp  GroupItem.cpp  GroupItem.hpp  History.cpp  History.hpp  Image.cpp  Image.hpp  ImageManager.cpp  ImageManager.hpp  Item.cpp  Item.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFaceBVH.cpp  MeshFaceBVH.hpp  MeshFragment.hpp  MeshItem.cpp  MeshItem.hpp  MeshObject.cpp  MeshObject.hpp  MeshSelection.cpp  MeshSelection.hpp  MeshShape.cpp  MeshShape.hpp  Object.cpp  Object.hpp  OldMesh.cpp  OldMesh.hpp  PolygonShape.cpp  PolygonShape.hpp  PolygonShapeItem.cpp  PolygonShapeItem.hpp
src/draw/: Clear.cpp  Clear.hpp  Copy.cpp  Copy.hpp  DrawCircle.cpp  DrawCircle.geom  DrawCircle.hpp  DrawCircle.vert  DrawLine.cpp  DrawLine.geom  DrawLine.hpp  DrawLine.vert  DrawLine2D.geom  DrawMaterial.cpp  DrawMaterial.hpp  DrawMaterial.vert  DrawSolid.cpp  DrawSolid.hpp  DrawUnicolor.cpp  DrawUnicolor.hpp  Material.hpp  Operations.hpp  Vertex.hpp
src/drawable/: LinesDrawable.cpp  LinesDrawable.hpp  LinesDrawable.vert  LinesGeometry.cpp  LinesGeometry.hpp  Point.hpp  Points.geom  PointsDrawable.cpp  PointsDrawable.hpp  PointsDrawable.vert
src/editor/: Background.cpp  Background.hpp  CameraController.cpp  CameraController.hpp  CameraState.cpp  CameraState.hpp  EditedMeshRenderer.cpp  EditedMeshRenderer.hpp  EditorScene.cpp  EditorScene.hpp  EditorViewport.cpp  EditorViewport.hpp  EditorViewportContainer.cpp  EditorViewportContainer.hpp  EditorWidget.cpp  EditorWidget.hpp  GridFloor.cpp  GridFloor.hpp  ItemInteractor.cpp  ItemInteractor.hpp  ItemPicker.cpp  ItemPicker.hpp  KeyObserver.cpp  KeyObserver.hpp  Manipulator.cpp  Manipulator.hpp  ManipulatorController.cpp  ManipulatorController.hpp  MeshEditor.cpp  MeshEditor.hpp  MeshPicker.cpp  MeshPicker.hpp  MeshRenderer.cpp  MeshRenderer.hpp  MeshVAOGenerator.cpp  MeshVAOGenerator.hpp  OldManipulator.cpp  OldManipulator.hpp  OldManipulatorController.cpp  OldManipulatorController.hpp  (+8 more)
src/gl/: Binder.hpp  ContextRecallable.cpp  ContextRecallable.hpp  DrawMethod.cpp  DrawMethod.hpp  Framebuffer.cpp  Framebuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LineMesh.cpp  LineMesh.hpp  LineVAO.cpp  LineVAO.hpp  Mesh.cpp  Mesh.hpp  PointVAO.cpp  PointVAO.hpp  PointsVAO.cpp  PointsVAO.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/mesh/: Handle.hpp  Mesh.cpp  Mesh.hpp  Mesh.test.cpp  MeshData.cpp  MeshData.hpp  MeshFragment.cpp  MeshFragment.hpp  MeshPicker.cpp  MeshPicker.hpp
src/newmesh/: Mesh.cpp  Mesh.hpp
src/oldgl/: ContextRecallable.cpp  ContextRecallable.hpp  Framebuffer.cpp  Framebuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/oldmesh/: Mesh.cpp  Mesh.hpp  MeshFragment.hpp  MeshPicker.cpp  MeshPicker.hpp
src/render/: MouseEvent.cpp  MouseEvent.hpp  OldViewport.hpp  Operations.hpp  Pickable.cpp  Pickable.hpp  PickableMap.cpp  PickableMap.hpp  RenderWidget.cpp  RenderWidget.hpp  Renderable.cpp  Renderable.hpp  RenderableObject.cpp  RenderableObject.hpp  Util.cpp  Util.hpp  Viewport.cpp  Viewport.hpp  ViewportContainer.cpp  ViewportContainer.hpp
src/renderer/: Operations.hpp  RenderWidget.cpp  RenderWidget.hpp  Renderable.cpp  Renderable.hpp  Viewport.cpp  Viewport.hpp
src/resource/: Resource.cpp  Resource.hpp
src/services/: GLTFLoader.cpp  GLTFLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
src/state/: AppState.cpp  AppState.hpp  MeshEditState.cpp  MeshEditState.hpp  Preferences.cpp  Preferences.hpp  Tool.hpp  ViewportSplitMode.hpp
src/support/: AggregateUtil.hpp  Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Change.cpp  Change.hpp  Debug.cpp  Debug.hpp  Distance.hpp  Hash.hpp  JSON.cpp  JSON.hpp  Line.cpp  Line.hpp  Location.cpp  Location.hpp  Mod.hpp  OldCamera.cpp  OldCamera.hpp  OptionalGuard.hpp  PixelData.hpp  Pointer.hpp  Projection.cpp  Projection.hpp  Property.hpp  PropertyChange.hpp  Ray.cpp  Ray.hpp  ScopedTimer.cpp  ScopedTimer.hpp  SetUtil.hpp  SharedPointer.hpp  SharedResourceBag.cpp  SharedResourceBag.hpp  Shorthands.hpp  SingletonBag.cpp  SingletonBag.hpp  SortedArray.hpp
src/ui/: AppState.cpp  AppState.hpp  ItemListPane.cpp  ItemListPane.hpp  ItemListView.cpp  ItemListView.hpp  ItemModel.cpp  ItemModel.hpp  ItemPropertyPane.cpp  ItemPropertyPane.hpp  ItemPropertyView.cpp  ItemPropertyView.hpp  ItemSelectionModel.cpp  ItemSelectionModel.hpp  LocationEdit.cpp  LocationEdit.hpp  MainWindow.cpp  MainWindow.hpp  MaterialListPane.cpp  MaterialListPane.hpp  MaterialListView.cpp  MaterialListView.hpp  MeshPropertyView.cpp  MeshPropertyView.hpp  ObjectItemModel.cpp  ObjectItemModel.hpp  ObjectListView.cpp  ObjectListView.hpp  ObjectPropertyView.cpp  ObjectPropertyView.hpp  ObjectSelectionModel.cpp  ObjectSelectionModel.hpp  PropertyView.cpp  PropertyView.hpp  ViewportSplit.hpp  ViewportSplitMode.hpp  main.cpp
src/viewport/: CameraController.cpp  CameraController.hpp  Circle.vert  CircleShader.cpp  CircleShader.hpp  GridFloor.cpp  GridFloor.hpp  HitAreaMap.cpp  HitAreaMap.hpp  HitResult.hpp  ItemInteractor.cpp  ItemInteractor.hpp  ItemPicker.cpp  ItemPicker.hpp  KeyObserver.cpp  KeyObserver.hpp  Manipulator.cpp  Manipulator.hpp  ManipulatorController.cpp  ManipulatorController.hpp  ManipulatorHandler.cpp  ManipulatorHandler.hpp  MeshPicker.cpp  MeshPicker.hpp  MeshRenderer.cpp  MeshRenderer.hpp  MeshVAOGenerator.cpp  MeshVAOGenerator.hpp  (+28 more)
(+175 files in other folders)
